[package]
name = "datchani"
version = "0.1.0"
edition = "2021"
description = "A Certain Magical Indexer"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
color-eyre = "0.6.2"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
shellexpand = "3.0.0"
tokio = { version = "1.23.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
walkdir = "2.3.2"
new_mime_guess = "4.0.1"
file_type_enum = "1.0.1"
infer = "0.11.0"
pretty_env_logger = "0.4.0"
nom = "7.1.1"
fuzzy-matcher = "0.3.7"
regex = "1.7.0"
